# SaddlePointLinearSolver

./: .gitignore  CMakeLists.txt  README.txt
scripts/: README.md  generate_metadata.py  merge_results.py  run_one_test.py
tests/: CMakeLists.txt
tests/Matrices/AssemblyMesh/: Assembly_PolyMAC_2_vp.petsc
tests/data/: README.md  matrices_metadata.csv
tests/src/: SaddlePointLinearSolver_par.c
